# reveng-recorder

./: .gitignore  Cargo.toml  DESIGN.md  Makefile  README.md
.github/workflows/: windows-build.yml
crates/core/: Cargo.toml
crates/core/src/: checkpoint.rs  clock.rs  event.rs  index.rs  input.rs  lib.rs  session.rs  source.rs  text.rs
crates/export/: Cargo.toml
crates/export/src/: lib.rs
crates/memcap/: Cargo.toml
crates/memcap/examples/: mksnaps.rs  snap_live.rs
crates/memcap/src/: lib.rs
crates/pcicap/: Cargo.toml
crates/pcicap/src/: drv.rs  etw.rs  filter.rs  lib.rs  log.rs  pci.rs
crates/recorder/: Cargo.toml  build.rs
crates/recorder/src/: annotate.rs  elevate.rs  frame.rs  hv.rs  main.rs  monitor.rs  notes_ui.rs  query.rs  record.rs  record_usb.rs  solve.rs  sweep.rs  usbpoke.rs
crates/recorder/ui/: record.slint
crates/usbcap/: Cargo.toml
crates/usbcap/examples/: extract_frame.rs  fake_usbpcapcmd.rs  fake_usbpcapcmd_hang.rs  mksession.rs  mksession_hv.rs
crates/usbcap/src/: devs.rs  ioctl.rs  lib.rs  parse.rs  pcap.rs  pcapng.rs  reader.rs  writer.rs
crates/viewer/: Cargo.toml
crates/viewer/src/: main.rs  model.rs
crates/winocr/: Cargo.toml
crates/winocr/src/: lib.rs
crates/winput/: Cargo.toml
crates/winput/examples/: hooktest.rs  inject.rs
crates/winput/src/: lib.rs
crates/winshot/: Cargo.toml
crates/winshot/examples/: grab.rs
crates/winshot/src/: lib.rs
crates/winui/: Cargo.toml
crates/winui/src/: lib.rs
driver/reveng-hv/: AUDIT-HANDOVER.md  README.md  reveng-hv-asm.asm  reveng-hv.c  reveng-hv.vcxproj  reveng_hv_abi.h
driver/reveng-pcidrv/: README.md  reveng-pcidrv.c  reveng-pcidrv.vcxproj  reveng_pci_abi.h
scripts/: get-usbpcap.ps1
