[package]
name = "reveng-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared, platform-neutral foundation: clock, event schema, CaptureSource, index, session."

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
