[package]
name = "reveng-pcicap"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "PCIe CaptureSource: replay source (portable) + hypervisor-backed source (Windows)."

[dependencies]
reveng-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_Performance",
    "Win32_System_Time",
    "Win32_Devices_DeviceAndDriverInstallation",
] }
