[package]
name = "reveng-recorder"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "reveng-rec: record sessions and query them (the LLM/CLI surface)."

[[bin]]
name = "reveng-rec"
path = "src/main.rs"

[dependencies]
reveng-core.workspace = true
reveng-usbcap.workspace = true
reveng-pcicap.workspace = true
reveng-winput.workspace = true
reveng-winshot.workspace = true
reveng-export.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
base64 = "0.22.1"

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
