[package]
name = "reveng-usbcap"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "USB CaptureSource: drives USBPcap, parses frames, owns the frames.idx layout."

[dependencies]
reveng-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
base64 = "0.22.1"

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_Devices_Usb",
] }

[dev-dependencies]
serde_json.workspace = true
