[package]
name = "reveng-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "reveng-viewer: egui timeline / USB inspector / seek (DESIGN.md §9). GUI TBD."

[[bin]]
name = "reveng-viewer"
path = "src/main.rs"

[dependencies]
reveng-core.workspace = true
anyhow.workspace = true
clap.workspace = true
reveng-usbcap.workspace = true
reveng-pcicap.workspace = true
serde_json.workspace = true
image = { version = "0.25.10", default-features = false, features = ["png"] }
eframe = "0.35.0"
