[package]
name = "reveng-winput"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Global low-level mouse/keyboard hooks (Windows). InputEvent schema is portable."

[dependencies]
reveng-core.workspace = true
anyhow.workspace = true
serde.workspace = true

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_UI_Input_KeyboardAndMouse"] }

[dev-dependencies]
serde_json.workspace = true
