[package]
name = "reveng-winui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Capture the UI-Automation widget tree of a window (typed controls, rects, states, values)."

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[target."cfg(windows)".dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
name = "uia-probe"
path = "src/bin/uia_probe.rs"

[[bin]]
name = "uia-set"
path = "src/bin/uia_set.rs"
